VehicleLookUp ApiServices implemented

--- a/VOLKSWAGEN.API/VOLKSWAGEN.API.csproj
+++ b/VOLKSWAGEN.API/VOLKSWAGEN.API.csproj
@@ -5,16 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Utilities\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\VOLKSWAGEN.Core\VOLKSWAGEN.Core.csproj" />
+    <ProjectReference Include="..\VOLKSWAGEN.Infrastructure.DependencyResolution\VOLKSWAGEN.Infrastructure.DependencyResolution.csproj" />
     <ProjectReference Include="..\VOLKSWAGEN.Infrastructure\VOLKSWAGEN.Infrastructure.csproj" />
   </ItemGroup>
 
