--- a/VOLKSWAGEN.API/VOLKSWAGEN.API.csproj
+++ b/VOLKSWAGEN.API/VOLKSWAGEN.API.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\VOLKSWAGEN.Infrastructure\VOLKSWAGEN.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
