--- a/VOLKSWAGEN.API/appsettings.json
+++ b/VOLKSWAGEN.API/appsettings.json
@@ -7,17 +7,7 @@
   "AllowedHosts": "*",
 
   "VehicleLookConfig": {
-    "BaseUrl": "https://uk1.ukvehicledata.co.uk/api/datapackage/",
     "Apikey": "8e1ed6d1-b8d6-4d7f-a333-cc99bc9da684",
-    "QueryUrl": "VehicleData?v=2&api_nullitems=1&auth_apikey={0}&key_vrm={1}"
-  },
-
-  "ResponseObject": {
-    "Response": "Response",
-    "DataItems": "DataItems",
-    "VehicleRegistration": "VehicleRegistration",
-    "ResponseCode": "StatusCode",
-    "Success": "Success",
-    "KeyInvalid": "KeyInvalid"
+    "FullUrl": "https://uk1.ukvehicledata.co.uk/api/datapackage/VehicleData?v=2&api_nullitems=1&auth_apikey={0}&key_vrm={1}"
   }
 }
