--- a/VOLKSWAGEN.Infrastructure/VOLKSWAGEN.Infrastructure.csproj
+++ b/VOLKSWAGEN.Infrastructure/VOLKSWAGEN.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
